--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <a href="#home">Home </a>
             <a href="">Teacher Parel</a>
-            <a href="#work">Manchitro</a>
+            <a href="https://reduancode.github.io/manchitro1/">Manchitro</a>
             <a href="#about">About us</a>
             <a href="#contact">Contact</a>
             <!-- <a href="portfolio/">click here to see our all memder</a> -->
