--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
+    <link rel="icon" type="img" href="Image/geographic.png">
+
 </head>
 
 <body>
@@ -17,10 +19,10 @@
         <div class="logo">GEOGREAPHY</div>
         <nav>
             <a href="#home">Home </a>
-            <a href="">Teacher Parel</a>
             <a href="https://reduancode.github.io/manchitro1/">Manchitro</a>
             <a href="#about">About us</a>
             <a href="#contact">Contact</a>
+             <a href=" ">Teacher Parel</a>
             <!-- <a href="portfolio/">click here to see our all memder</a> -->
         </nav>
     </header>
@@ -36,7 +38,7 @@
                 <div class="hero-btns animate-slide">
                     <!-- <a href="#about" class="primary">Learn More</a>
                     <a href="#contact" class="outline">Contact Us</a> -->
-                    <a href="#registration" class="secondary">Registration</a>
+                    <a href="https://forms.gle/Z3m4QUotQgfLC8Zx8" class="secondary">Nobin Boron Registration</a>
                     <br>
                     <a href="#member" class="secondary">Member Registration</a>
                 </div>
