--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="https://reduancode.github.io/manchitro1/">Manchitro</a>
             <a href="#about">About us</a>
             <a href="#contact">Contact</a>
-             <a href=" ">Teacher Parel</a>
+             <a href=" ">Teacher </a>
             <!-- <a href="portfolio/">click here to see our all memder</a> -->
         </nav>
     </header>
