--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="logo">GEOGREAPHY</div>
         <nav>
             <a href="#home">Home </a>
-            <a href=" ">Teacher </a>
+            <a href="https://reduancode.github.io/tec-25/">Teacher </a>
             <a href="https://reduancode.github.io/manchitro1/">Manchitro</a>
             <a href="#about">About us</a>
             <a href="#contact">Contact</a>
