--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                         
                                 ICT LAB PRACTICAL CLASS REGISTRATION</a>
                      <br>
-                     <a href="https://forms.gle/Z3m4QUotQgfLC8Zx8" class="secondary">Nobin Boron Registration</a>
+
+                     <!-- <a href="https://forms.gle/Z3m4QUotQgfLC8Zx8" class="secondary">Nobin Boron Registration</a> -->
                     
 
                 </div>
@@ -67,8 +68,10 @@
         <div class="about-text animate-fade">
             <h2>About Us</h2>
             <p>
-              DEPERTMENT OF GEOGREAPHY is committed to providing modern, practical, and accessible education for students.  
-                Learn technology, communication, and problem-solving skills through engaging programs.
+              <h3>Department of Geography</h3>
+              <br>
+
+            The Department of Geography focuses on the study of the Earth, environment, and human–nature relationships. We offer quality education in physical and human geography, environmental studies, and Geographic Information Systems (GIS) through modern teaching methods, practical learning, and fieldwork. Our aim is to prepare skilled and responsible graduates for academic, research, and professional careers.
             </p>
         </div>
 
