--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <a href="#home">Home </a>
             <a href="https://reduancode.github.io/tec-25/">Teacher </a>
-            <a href="https://reduancode.github.io/manchitro1/">Manchitro</a>
+            <a href="https://reduancode.github.io/manchitro2.0/">Manchitro</a>
             <a href="#about">About us</a>
             <a href="#contact">Contact</a>
              
@@ -34,12 +34,12 @@
         <div class="hero-overlay">
             <div class="hero-content">
                 <br>
-                <marquee style="color: rgb(2, 240, 2)">Welcome to DEPERTMENT OF GEOGREAPHY</marquee>
+                <marquee style="color: rgb(2, 240, 2)">Welcome to DEPERTMENT OF GEOGRAPHY & ENVIRONMENT</marquee>
 
 
                 <br>
 
-                <h1 class="animate-slide">DEPERTMENT OF GEOGREAPHY </h1>
+                <h1 class="animate-slide">DEPERTMENT OF GEOGRAPHY & ENVIRONMENT </h1>
                 <p class="animate-fade">LOOK BEYOND THE HORIZON - EVERY FIELD TRIP IS A STEP TOWARD DISCOVERY.GO WHERE YOUR HEART BELONGS</p>
                 
                 <!-- Hero Buttons -->
